2017-10-11         [RELEASE] Release of persons 0.6.0 (Dirk Wenzel)
2017-10-11 f4ca8df [TASK] script tags and data attributes added to templates for filter and list view. (Dirk Wenzel)
2017-10-10 88a4157 [BUGFIX] fixed error where default language were not found in LocalizationUtility (Dirk Wenzel)
2017-10-10 cfa917f [TASK] PersonControllerSlot edited: pass keys for current language only (Dirk Wenzel)
2017-10-10 c4a3a07 [TASK] PersonControllerSlot now allows transferring additional keys in list action. LocalizationUtility extended by method getLanguageKey. Connect signals and slots. (Dirk Wenzel)
2017-10-10 ad38330 [TASK] LocalizationUtility and PersonControllerSlot implemented. (Dirk Wenzel)
2017-10-05 cb621fe [TASK] TypoScript documentation added. (Dirk Wenzel)
2017-10-05 65413b1 [TASK] obsolete settings removed from default TypoScript. Documentation added. (Dirk Wenzel)
2017-10-05 13d1d06 [BUGFIX] fixed error caused by missing method callStatic. CallStaticTrait implemented. (Dirk Wenzel)
2017-10-04 c3116e8 [TASK] ImageService implemented. AbstractJsonView extended: Now renders image URI for FileReference if configured in settings. Example for imageProcessing  added to TypoScript. Caching enabled in default configuration for personPage object. (Dirk Wenzel)

2017-09-29         [RELEASE] Release of persons 0.5.0 (Dirk Wenzel)
2017-09-29 62c00f5 [TASK] cast to bool replaced by !empty() in PersonRepository->findMultipleByUid (Dirk Wenzel)
2017-09-26 83b4352 [BUGFIX] Allow persons with default language in showSelectedAction (Nicole Cordes)

2017-09-26         [RELEASE] Release of persons 0.4.1 (Dirk Wenzel)
2017-09-26 46cf6d6 [BUGFIX] fixed error in AbstractJsonView caused by invalid return value null of TYPO3\CMS\Extbase\Persistence\Generic\LazyLoadingProxy->_loadRealInstance() (Dirk Wenzel)

2017-09-25         [RELEASE] Release of persons 0.4.0 (Dirk Wenzel)